syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;



service DoTaskService {
    rpc Create(CreateDoTask) returns (DoTask) {}
    rpc GetByID(DoTaskPrimaryKey) returns (DoTask) {}
    rpc GetList(GetListDoTaskRequest) returns (GetListDoTaskResponse) {}
    rpc Update(UpdateDoTask) returns (DoTask) {}
    rpc Delete(DoTaskPrimaryKey) returns (DoTaskEmpty) {}
}


message DoTaskEmpty{}

message DoTaskPrimaryKey {
    string id = 1;
}

message CreateDoTask {
    string task_id= 1;
    string student_id = 2;
    double score = 3;
}

message DoTask {
    string id = 1;
    string task_id = 2;
    string student_id = 3;
    double score = 4;
    string created_at = 5;
    string updated_at = 6;
}

message UpdateDoTask {
    string id = 1;
    string task_id = 2;
    string student_id = 3;
    double score = 4;
}

message GetListDoTaskRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListDoTaskResponse {
    int64 count = 1;
    repeated DoTask DoTasks = 2;
}
